# natu

./: .env  .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.pgdata/: log  postgresql.conf  postmaster.opts  postmaster.pid
.pgdata/base/1/: 1255  1259  12597  12598_vm  1259_vm  2602_vm  2605_vm  2606_vm  2608_vm  2610_vm  2617_vm  2618  2619  2659  2663  2665  2666  2667  2696  2836  2837  2839  2840  2840_vm  2841  3394  3541_vm  3609  3712  3764  3764_vm  3767
.pgdata/base/16384/: 16393  16394  16396  16397  16405  16411  16418  16424  16435  16440  16446  16451  16457  16468  16481  16482  16502  16503  16517  16518  16520  16528  16529  16531  16540  16541  pg_internal.init
.pgdata/base/4/: 1247_vm  1249  1249_vm  1255_vm  12588_vm  1259  12592  12593_vm  12598  12603  12607  2579  2600_vm  2609_vm  2612  2615_vm  2619  2619_fsm  2673  2674  2675  2685  2690  2691  2703  2753_vm  3085  3164  3455  3456  3456_vm  3601_vm  3603  3605  3608  3766
.pgdata/base/5/: 1247  12588  12593  12602  12603_vm  2601_vm  2603_vm  2606  2607_vm  2608  2609  2610  2612_vm  2615  2616_vm  2618_vm  2619_vm  2658  2662  2664  2678  2679  2681  2682  2684  2692  2693  2696  2704  2836_vm  2838  2838_vm  2840  3079  3079_vm  3080  3081  3394_vm  3395  3600  (+6 more)
.pgdata/global/: 1213_vm  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  pg_control  pg_internal.init
docs/: EXTERNAL_SOURCES.md  REPO_GUIDE.md
notebooks/: 00_market_registry.py  01_data_quality.py  02_lead_lag.py  03_spread_reversion.py  04_funding_carry.py  05_execution_edge.py  06_weekly_memo.py
sql/: schema.sql
src/arb/: __init__.py  config.py  db.py  logging_config.py
src/arb/backtest/: __init__.py  engine.py  metrics.py
src/arb/execution/: __init__.py  models.py  paper_trader.py  simulator.py
src/arb/market_data/: __init__.py  client.py  models.py  normalizer.py  store.py
src/arb/portfolio/: __init__.py  ledger.py
src/arb/reporting/: __init__.py  memos.py
src/arb/risk/: __init__.py  circuit_breaker.py  controls.py
src/arb/scripts/: backfill.py  build_registry.py  collect.py  collector_daemon.py  phase1_status.py  registry_audit.py  run_backtest.py
src/arb/signals/: __init__.py  features.py  funding.py  lead_lag.py  spreads.py
tests/: conftest.py  test_collect.py  test_execution.py  test_normalizer.py  test_registry.py  test_registry_audit.py  test_risk.py  test_signals.py
