[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arb"
version = "0.1.0"
description = "HIP-3 Cross-Venue Basis and Lead-Lag Validation Program"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "structlog>=23.2",
    "rich>=13.7",
    "typer>=0.9",
    "httpx>=0.26",
    "orjson>=3.9",
    "pyarrow>=14.0",
    "eth-account>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ipykernel>=6.27",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
arb-collect = "arb.scripts.collect:main"
arb-collector-daemon = "arb.scripts.collector_daemon:main"
arb-registry = "arb.scripts.build_registry:main"
arb-backtest = "arb.scripts.run_backtest:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in default args (pydantic-settings pattern)
    "UP007",  # use X | Y for unions (keep Optional for py310 compat)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is fine in tests

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
files = ["src/arb"]
